subprojects/pclc/test/errors/ambiguous_call.pcl
// RUN: not pclc %s | tee %t.stdout

foo = func () : foo {
  print 1;
}

foo();
